--- a/index.html
+++ b/index.html
@@ -2,6 +2,34 @@
 <html lang="en">
 
 <head>
+
+    <!--
+     ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
+     │                                                                                                            │
+     │                                                                                                            │██
+     │                   _____ _____ ____ _   _  ____ ___  _   _ _   _ _____ ____ _____ ___ ___                   │██
+     │                  |_   _| ____/ ___| | | |/ ___/ _ \| \ | | \ | | ____/ ___|_   _|_ _/ _ \                  │██
+     │                    | | |  _|| |   | |_| | |  | | | |  \| |  \| |  _|| |     | |  | | | | |                 │██
+     │                    | | | |__| |___|  _  | |__| |_| | |\  | |\  | |__| |___  | |_ | | |_| |                 │██
+     │                    |_| |_____\____|_| |_|\____\___/|_| \_|_| \_|_____\____| |_(_)___\___/                  │██
+     │                                                                                                            │██
+     │                                                                                                            │██
+     │                                                                                                            │██
+     └────────────────────────────────────────────────────────────────────────────────────────────────────────────┘██
+       ██████████████████████████████████████████████████████████████████████████████████████████████████████████████
+       ██████████████████████████████████████████████████████████████████████████████████████████████████████████████
+
+      ┌───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
+      │                                                                                                           │
+      │                        Site designed and developed by Jake Tobin jtobin4@kent.edu                         │
+      │                                                                                                           │
+      │                               Logo by Lena Willoughby and Melanie Nestuerk                                │
+      │                                                                                                           │
+      │                  Credit to Beetle (http://mokaine.com/beetle-free-html/) and Layers.css                   │
+      │                                                                                                           │
+      │                                    Blog credit: Ghost.org theme crisp                                     │
+      └───────────────────────────────────────────────────────────────────────────────────────────────────────────┘
+    -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="The Page Description">
@@ -22,6 +50,23 @@
     <link rel="apple-touch-icon" sizes="76x76" href="img/apple-touch-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="120x120" href="img/apple-touch-icon-120x120.png">
     <link rel="apple-touch-icon" sizes="152x152" href="img/apple-touch-icon-152x152.png">
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-55453123-6', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body class="page">
@@ -287,23 +332,6 @@
 <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script src="js/plugins.js"></script>
 <script src="js/beetle.js"></script>
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-55453123-6', 'auto');
-    ga('send', 'pageview');
-
-</script>
 
 </body>
 
