Added Chat Blog Survey

--- a/index.html
+++ b/index.html
@@ -88,25 +88,47 @@
 
         <section class="row section call-to-action">
             <div class="row-content buffer even">
-                <a class="button red" href="https://jake49.typeform.com/to/FlCDTs" data-mode="1" target="_blank">Register</a>
+                <!--<a class="button red" href="https://jake49.typeform.com/to/FlCDTs" data-mode="1" target="_blank">Register</a>-->
+                <!--<script>(function () {-->
+                    <!--var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = 'typef_orm', b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';-->
+                    <!--if (!gi.call(d, id)) {-->
+                        <!--js = ce.call(d, 'script');-->
+                        <!--js.id = id;-->
+                        <!--js.src = b + 'share.js';-->
+                        <!--q = gt.call(d, 'script')[0];-->
+                        <!--q.parentNode.insertBefore(js, q)-->
+                    <!--}-->
+                    <!--id = id + '_';-->
+                    <!--if (!gi.call(d, id)) {-->
+                        <!--qs = ce.call(d, 'link');-->
+                        <!--qs.rel = 'stylesheet';-->
+                        <!--qs.id = id;-->
+                        <!--qs.href = b + 'share-button.css';-->
+                        <!--s = gt.call(d, 'head')[0];-->
+                        <!--s.appendChild(qs, s)-->
+                    <!--}-->
+                <!--})()</script>-->
+                <a class="button red" href="http://blog.techconnect.io">Blog</a>
+                <a class="button blue" href="http://chat.techconnect.io">Chat</a>
+                <a class="button green" href="https://jake49.typeform.com/to/IYYFsU" data-mode="1" target="_blank">Survey</a>
                 <script>(function () {
-                    var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = 'typef_orm', b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-                    if (!gi.call(d, id)) {
-                        js = ce.call(d, 'script');
-                        js.id = id;
-                        js.src = b + 'share.js';
-                        q = gt.call(d, 'script')[0];
-                        q.parentNode.insertBefore(js, q)
-                    }
-                    id = id + '_';
-                    if (!gi.call(d, id)) {
-                        qs = ce.call(d, 'link');
-                        qs.rel = 'stylesheet';
-                        qs.id = id;
-                        qs.href = b + 'share-button.css';
-                        s = gt.call(d, 'head')[0];
-                        s.appendChild(qs, s)
-                    }
+                var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = 'typef_orm', b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
+                if (!gi.call(d, id)) {
+                js = ce.call(d, 'script');
+                js.id = id;
+                js.src = b + 'share.js';
+                q = gt.call(d, 'script')[0];
+                q.parentNode.insertBefore(js, q)
+                }
+                id = id + '_';
+                if (!gi.call(d, id)) {
+                qs = ce.call(d, 'link');
+                qs.rel = 'stylesheet';
+                qs.id = id;
+                qs.href = b + 'share-button.css';
+                s = gt.call(d, 'head')[0];
+                s.appendChild(qs, s)
+                }
                 })()</script>
             </div>
         </section>
@@ -135,7 +157,7 @@
                     <div class="small-icon-text clear-after">
                         <h4>Where</h4>
 
-                        <p class="text-xs">Join us in Franklin Hall’s FirstEnergy Auditorium on the Kent State
+                        <p class="text-xs">Join us in Franklin Hall’s FirstEnergy Auditorium (Room 340) on the Kent State
                             University campus. 550 Hilltop Dr., Kent, Ohio 44242</p>
                     </div>
                 </div>
@@ -320,6 +342,7 @@
                 <div class="widget meta-social column half">
                     <h4>Follow Us</h4>
                     <ul class="inline">
+                        <li><a href="https://twitter.com/techconnectkent" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
                         <li><a href="https://www.facebook.com/events/528220553986325/"
                                class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
                     </ul>
