--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <!--}-->
                 <!--})()</script>-->
                 <a class="button red" href="http://blog.techconnect.io">Blog</a>
-                <a class="button blue" href="http://chat.techconnect.io">Chat</a>
+                <a class="button blue" href="http://techconnect.io/videos.html">Session Videos (Coming Soon)</a>
                 <a class="button green" href="https://jake49.typeform.com/to/IYYFsU" data-mode="1" target="_blank">Survey</a>
                 <script>(function () {
                 var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = 'typef_orm', b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
