--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
     padding-top: 0px;
     padding-bottom: 0px;
 ">
+                <h3>Thanks to everyone that joined us on April 26th!</h3>
+                <h4>...Videos of the sessions will be posted soon...</h4>
                 <p>Spend a day, learn a lot</p>
             </div>
         </section>
